61 Add post contour
